# aries

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api/core/: index.html
api/linalg/: index.html
api/metrics/: index.html
api/noise/: index.html
aries/: .gitignore  README.md  __init__.py  _core.py  _linalg.py  _metrics.py  _noise.py
aries/tools/: __init__.py
docs/: index.md  installation.md
docs/api/: core.md  linalg.md  metrics.md  noise.md
docs/examples/: cwieki.md  gr4j.md  sacsma.md
docs/reference/: bibliography.md  theory.md
examples/cwieki/: index.html
examples/gr4j/: index.html
examples/sacsma/: index.html
installation/: index.html
plans/: aries_student_t_plan.md
reference/bibliography/: index.html
reference/theory/: index.html
search/: search_index.json
st_helens_aries_calibration/: st_helens_student_t.ipynb  test_student_t.py
st_helens_aries_calibration/aries/: _core.py
writing/: generate_student_t_figures.py  regenerate_figures.py  regenerate_figures_v3.py  st_helens_algorithm.tex  st_helens_student_t.tex
